package map;

import entities.*;

public class HealTile extends Tile{
    public HealTile(int growthRate, int maxMycelium, Tekton parentTekton){
        super(growthRate, maxMycelium, parentTekton);
    }

    @Override
    public void update() {
        // Will implement later
    }


}
