@startuml CD_InGameObjects

package "Class diagram for In-Game Objects" #E1DFEB {
    
    'world elements'

    class Map {
        + tick()
    }

    class Tekton {
        + breakChance : int
        + sporeCount : int
        + break()
        + growMycelium(neighbour : Tile)
        + increaseChance(amount : int)
        + update()
    }

    class Tile {
        + growthRate : int
        + maxMycelium : int
        + parentTekton : Tekton
        + getParentTekton()
        + setParentTekton(t : Tekton)
        + growMycelium()
        + addEntity(e : GameEntity)
        + removeEntity(e : GameEntity)
        + isNeighbor(t : Tile) : boolean
    }

    class MonoTile {
        + isTaken : boolean
        + override addEntity(e : GameEntity)
    }

    class AcidTile {
        damageRate : int
        + override addEntity(e : GameEntity)
        + damage()
    }

    class HealTile {
        + override addEntity(e : GameEntity)
    }
    'interactive elements'

    abstract class GameEntity {
        + id : int
        + currentTile : Tile
        + getCurrentTile()
        + setTile(t : Tile)
        + damage()
        + heal()
    }

    class Mycelium {
        + maxHealth : int
        + connect()
        + detach()
        + update()
        + override damage()
        + override heal()
    }

    class Spore {
        + nutrientValue : int
        + lifetime : int
        + effectTime : int
        + effectValue : int
        + void getEaten(i : Insect)
    }

    class SlowSpore {
        + override getEaten(i : Insect)
    }

    class SpeedUpSpore {
        + override getEaten(i : Insect)
    }

    class FreezeSpore {
        + override getEaten(i : Insect)
    }

    class CutSpore {
        + override getEaten(i : Insect)
    }

    class SplitSpore {
        + override getEaten(i : Insect)
    }

    'playable elements'

    abstract class Player {
        + score : int
        + actionPoints : int
        + pickStartingTile(t : Tile)
        + calculatePoints()
        + updateScore(score : int)
    }


    class FungusPlayer {
        + List<Mycelium> mycelia
        + placeMycelium(t : Tile)
        + growBody(t : Tile)
        + sporeCloud(target : FungusBody, size : int)
        + consumeInsect(i : Insect)
    }

    abstract class Fungus {
        health : int
        + growMycelium(neighbour : Tile)
        + growBody(neighbour : Tile)
        + die()
    }

    class FungusBody {
        sporeCharge : int
        + sporeCloud(size : int)
        + update()
    }
    
    class InsectPlayer {
        + moveTo(t : Tile, insect : Insect)
        + eat(insect : Insect) : boolean
        + cut(insect : Insect) : boolean
    }

    class Insect {
        + speed : int
        + canCut : bool
        + eat(target : Spore)
        + step(target : Tile)
        + cut(target : Tile)
        + update()
        + setSpeedPercent(percent : int)
        + setCut()
        + split()
        + die()
    }

    'connections'

    Spore --|> GameEntity
    Fungus --|> GameEntity
    Insect --|> GameEntity

    Mycelium --o FungusBody

    SlowSpore --|> Spore
    FreezeSpore --|> Spore
    SpeedUpSpore --|> Spore
    CutSpore --|> Spore
    SplitSpore --|> Spore

    Tekton --o "1" Map
    FungusBody "1" --* "1" Tekton
    Fungus --> Tekton
    Mycelium --> Tekton
    Tile "*" --* "1" Tekton

    MonoTile --|> Tile
    AcidTile --|> Tile
    HealTile --|> Tile
    
    Mycelium --|> Fungus
    FungusBody --|> Fungus
    GameEntity "*" --* "1" Tile
    Tile  --o  Tile
    Tekton --o Tekton
    FungusPlayer --|> Player
    Mycelium "*" --* "1" FungusPlayer
    InsectPlayer --|> Player
    Insect "*" --* "1" InsectPlayer
    FungusBody "*" --* "1" FungusPlayer
    Spore "1" --* "*" Insect
    Mycelium  -- Tile
}

@enduml
